# Imaginatrix

./: .gitignore  CMakeLists.txt  RendererInfo.txt
shaders/: default.frag  default.vert  skybox.frag  skybox.vert
src/: Engine.cpp  Engine.h  main.cpp
src/API/OpenGL/: OGLBackEnd.cpp  OGLBackEnd.h  OGLRenderer.cpp  OGLRenderer.h
src/API/OpenGL/Types/: GL_Shader.cpp  GL_Shader.h  GL_Texture.cpp  GL_Texture.h  GL_VertexBuffer.h
src/API/Vulkan/: VkBackEnd.cpp  VkBackEnd.h  VkRenderer.cpp  VkRenderer.h
src/API/Vulkan/Types/: vk_allocation.h  vk_buffer.h  vk_frameData.h
src/BackEnd/: BackEnd.cpp  BackEnd.h
src/Common/: Enums.h  RendererCommon.h  Types.h
src/Core/: AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h
src/Game/: Game.cpp  Game.h  Player.cpp  Player.h  Scene.cpp  Scene.h
src/IMCommon/: Common.h  Defines.h  RendererCommon.h
src/Input/: Input.cpp  Input.h  keycodes.h
src/Input/Camera/: FPS_Input.cpp  FPS_Input.h
src/Renderer/: RenderData.cpp  RenderData.h  Renderer.cpp  Renderer.h
src/Renderer/Types/: Mesh.h  VertexBuffer.cpp  VertexBuffer.h
